--- a/algorithms.Rmd
+++ b/algorithms.Rmd
@@ -8,36 +8,69 @@
 
 ## (1) Split-Sample Cross-Validation
 
--   Step 1: Split data in train and test sets
--   Step 2: Train the model on train set
--   Step 3: Compute predictions on the test set using the trained model
--   Step 4: Test predictions accuracy: compute and compare in-sample error with out-of-sample error
+-   Split data in train and test sets
+-   Train the model on train set
+-   Compute predictions on the test set using the trained model
+-   Test predictions accuracy: compute and compare in-sample error with out-of-sample error
 
 ## (2) k-Fold Cross-Validation
 
--   Step 1: Shuffle dataset rows
--   Step 2: Split data in train and test sets k times
--   Step 3: Train the model from each generated train set
--   Step 4: Compute predictions on each test set using the trained models
--   Step 5: Test predictions accuracy: compute and compare in-sample error with out-of-sample error 
+-   Shuffle dataset rows
+-   Split data in train and test sets k times
+-   Train the model from each generated train set
+-   Compute predictions on each test set using the trained models
+-   Test predictions accuracy - compute and compare in-sample error with out-of-sample error
 
 ## (3) Bagging
 
--   Step 1: Split data in train and test sets
--   Step 2: Create resampled n train sets (resample with replacement)
--   Step 3: Train the model from each generated train set
--   Step 4: Compute predictions on the test set using the trained models
--   Step 5: Average the predictions
--   Step 6: Compute and compare in-sample error with out-of-sample error
+-   Split data in train and test sets
+-   Create resampled n train sets (resample with replacement)
+-   Train the model from each generated train set
+-   Compute predictions on the test set using the trained models
+-   Average the predictions
+-   Test predictions accuracy - Compute and compare in-sample error with out-of-sample error
 
 ## (4) Boosting
 
--   Step 1: Split data in train and test sets
--   Step 2: Train the model on train set
--   Step 3: Compute predictions on the test set using the trained model
--   Step 4: Extract fitted values
--   Step 5: Calculate residuals (in-sample error)
--   Step 6: Exchange the y variable of the model with the residuals, retrain the model on the train set
--   Step 7: Set a learning rate to prevent overfitting, and repeat Steps 4, 5 and 6 n times
+### Learning:
+
+-   Split data in train and test sets
+-   Train the model on train set
+-   Extract fitted values
+-   Calculate residuals (in-sample error)
+-   Exchange the y variable of the model with the residuals
+-   Iterate through n rounds training a new model each time
+    -   Fit the model
+    -   Extract fitted values
+    -   Update the residuals with a learning rate
+    -   Store each trained model for later prediction
+
+### Predicting:
+
+-   Iterate through the n stored models
+    -   Predict outcome for each model
+    -   Store predictions
+-   Sum predictions together with learning rate
+    -   Multiply prediciton by learning rate
+    -   Add prediction to previous rounds
+
+The final outcome is a vector of predictions. Compute out-of-sample error and compare with in-sample.
 
 ## (5) Random Forest
+
+```{r, eval=FALSE}
+Given training data set
+Select number of trees to build (ntrees)
+for i = 1 to ntrees do
+  |  Generate a bootstrap sample of the original data
+  |  Grow a regression tree to the bootstrapped data
+  |  for each split do
+  |  | Select m variables at random from all p variables
+  |  | Pick the best variable/split-point among the m
+  |  | Split the node into two child nodes
+  |  end
+  | Use typical tree model stopping criteria to determine when a tree is complete (but do not prune)
+end
+```
+
+Source: <https://uc-r.github.io/random_forests>
